; ModuleID = '/home/carl/AnghaBench/ish/kernel/extr_futex.c_futex_wake.c'
source_filename = "/home/carl/AnghaBench/ish/kernel/extr_futex.c_futex_wake.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.futex = type { i32 }

@.str = private unnamed_addr constant [33 x i8] c"invalid number of futex wakes %d\00", align 1

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @futex_wake(i32 %0, i32 %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca i32, align 4
  %5 = alloca %struct.futex*, align 8
  store i32 %0, i32* %3, align 4
  store i32 %1, i32* %4, align 4
  %6 = load i32, i32* %3, align 4
  %7 = call %struct.futex* @futex_get(i32 %6)
  store %struct.futex* %7, %struct.futex** %5, align 8
  %8 = load i32, i32* %4, align 4
  %9 = icmp eq i32 %8, 1
  br i1 %9, label %10, label %14

10:                                               ; preds = %2
  %11 = load %struct.futex*, %struct.futex** %5, align 8
  %12 = getelementptr inbounds %struct.futex, %struct.futex* %11, i32 0, i32 0
  %13 = call i32 @notify_once(i32* %12)
  br label %25

14:                                               ; preds = %2
  %15 = load i32, i32* %4, align 4
  %16 = icmp eq i32 %15, 2147483647
  br i1 %16, label %17, label %21

17:                                               ; preds = %14
  %18 = load %struct.futex*, %struct.futex** %5, align 8
  %19 = getelementptr inbounds %struct.futex, %struct.futex* %18, i32 0, i32 0
  %20 = call i32 @notify(i32* %19)
  br label %24

21:                                               ; preds = %14
  %22 = load i32, i32* %4, align 4
  %23 = call i32 @TODO(i8* getelementptr inbounds ([33 x i8], [33 x i8]* @.str, i64 0, i64 0), i32 %22)
  br label %24

24:                                               ; preds = %21, %17
  br label %25

25:                                               ; preds = %24, %10
  %26 = load %struct.futex*, %struct.futex** %5, align 8
  %27 = call i32 @futex_put(%struct.futex* %26)
  %28 = load i32, i32* %4, align 4
  ret i32 %28
}

declare dso_local %struct.futex* @futex_get(i32) #1

declare dso_local i32 @notify_once(i32*) #1

declare dso_local i32 @notify(i32*) #1

declare dso_local i32 @TODO(i8*, i32) #1

declare dso_local i32 @futex_put(%struct.futex*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
